helm-dagster-rendered/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dagster
  annotations:
    created-by: ltshb
    managed-by: kubectl
